


-------------------------------------------------------------------
2.1.9:
-Semantics, optimization, cleanup
-Textbelt and Textlocal API support
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.0:
-Converted cron job price alerts to dynamic / percentage-based
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.1:
-Optimized cron job price alerts back end / UX
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.2:
-Tweaks to new price alerts feature
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.3:
-Config to adjust chain stats cache time
-Optimize API cache efficiency
-Fixed cron alert bug related to trade pairings other than BTC
-Allowed multiple cron job alerts per asset (different exchanges / trade pairings for same asset)
-Tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.4:
-Updated copyright year
-Show trading pair info in cron alerts text
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.5:
-Tweaks to mining calculator setups
-Upgraded binance API to v3
-Multi proxy support for API calls
-Minor bug fixes / cleanup
-------------------------------------------------------------------



-------------------------------------------------------------------
2.2.6:
-Alerts / checkups on proxy failure
-Simplified / highly compatible proxy config settings
-------------------------------------------------------------------





















































































