@@ -865,6 +865,7 @@ app doing the data requests, not a malicious bot)
 2.2.6:
 -Alerts / checkups on proxy failure
 -Simplified / highly compatible proxy config settings
+-IDEX exchange API support
 -------------------------------------------------------------------
 
 
